<resources>
    <string name="app_name">Story App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_hint">Password</string>
    <string name="password_error_message">Password minimal harus 8 karakter</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="sudah_punya_akun">Sudah Punya Akun? </string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="story_title">Judul Cerita</string>
    <string name="image_description">Gambar Cerita</string>
    <string name="nestedscrollviewfragment">Nested Scroll View Fragment</string>
    <string name="tambah_cerita">Tambah Cerita</string>
    <string name="keluar">Keluar</string>
    <string name="detail_story_image">Detail Story Image</string>
    <string name="back_button">Back Button</string>
    <string name="text_description">Deskripsi Cerita</string>
    <string name="content_description">Isi cerita</string>
    <string name="text_name">Nama User</string>
    <string name="content_name">Isi Nama User</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="preview_image">Preview Image</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Maps</string>
    <string name="retry">Retry</string>
</resources>