<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center_vertical"
    tools:context=".ui.auth.register.RegisterFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:text="@string/register"/>

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/nama_lengkap"
            android:autofillHints="Name"
            android:layout_marginBottom="8dp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:autofillHints="Email"
            android:layout_marginBottom="8dp"
            android:inputType="textEmailAddress" />

        <org.irham3.storyapp.ui.views.PasswordEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btn_register"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="end">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sudah_punya_akun"/>

        <TextView
            android:id="@+id/tv_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/design_default_color_primary_dark"
            android:text="@string/masuk_sekarang"/>
    </LinearLayout>
</LinearLayout>